--- a/TODO
+++ b/TODO
@@ -10,4 +10,4 @@
 10, (DONE, 4/1/2015) Detach display: none; from grid component to make it more modular
 11, (DONE, 4/1/2015) Move from px to em at responsiveness border
 12, (DONE, 4/1/2015) Fix auto
-13, Comments :)
+14, (DONE, 14/3/2015) Fix grow
