--- a/TODO
+++ b/TODO
@@ -11,3 +11,4 @@
 11, (DONE, 4/1/2015) Move from px to em at responsiveness border
 12, (DONE, 4/1/2015) Fix auto
 14, (DONE, 14/3/2015) Fix grow
+15, (DONE, 14/3/2015) align -> item
