Add inner feature

--- a/TODO
+++ b/TODO
@@ -12,3 +12,4 @@
 12, (DONE, 4/1/2015) Fix auto
 14, (DONE, 14/3/2015) Fix grow
 15, (DONE, 14/3/2015) align -> item
+16, (DONE, 15/3/2015) Add 'inner' feature for row (980, 1050, 1100, 1200, 1300)
