--- a/TODO
+++ b/TODO
@@ -14,3 +14,4 @@
 15, (DONE, 14/3/2015) align -> item
 16, (DONE, 15/3/2015) Add 'inner' feature for row (980, 1050, 1100, 1200, 1300)
 17, (DONE, 9/7/2015) Typo: uppper -> upper
+18, (DONE, 14/10/2015) Add device text align feature attribute
